--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="main_content">
             <h3>Что это?</h3>
             <p>Если у тебя возникал вопрос "Каким образом дать возможность редакторам на сайте сообщать о найденных опечатках или ошибках", или сам частенько наталкивался на них и думал "Надо бы куда-нибудь записать чтоб не забыть поправить" - возможно, этот плагин будет тебе интересен.</p>
-            <p>Общая идея заключается в следующем &mdash; когда опечатку, то выделил её, и нажал "<strong>Ctrl</strong>" <small>("Cmd" для Mac)</small> + "<strong>Enter</strong>", после чего получил сообщение на почту. И не важно что крутится у тебя на сервере - решение применимо даже для простых статичных страниц, но об этом чуть ниже. Зависимость - необходим jQuery.</p>
+            <p>Общая идея заключается в следующем: когда редактор нашел опечатку &mdash; то выделил её, и нажал "<strong>Ctrl</strong>" <small>("Cmd" для Mac)</small> + "<strong>Enter</strong>", после чего получил сообщение на почту. И не важно что крутится у тебя на сервере - решение применимо даже для простых статичных страниц, но об этом чуть ниже. Зависимость - необходим jQuery.</p>
 
             <p>&nbsp;</p>
             <p><img src="images/cross-browser-support.png" alt="" style="border:none;box-shadow:none" /></p>
